methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:3: error: not found: value c
    faireV(c:Color) ;
           ^